# clean_architeture_project

./: .env  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_manage.bat  run_manage.sh
.github/workflows/: test.yml
code-of-conduct/: index.html
code/infrastructure/django_core/users/admin/: index.html
code/infrastructure/django_core/users/apps/: index.html
code/infrastructure/django_core/users/repository/: index.html
code/infrastructure/django_core/users/views/: index.html
code/source/application/users/dto/: index.html
code/source/application/users/service/: index.html
code/source/domain/users/entity/: index.html
code/source/domain/users/enums/: index.html
contributing/: index.html
docs/: code-of-conduct.md  contributing.md  faq.md  index.md  installation.md  project-structure.md
docs/code/infrastructure/django_core/core/: settings.md  urls.md  wsgi.md
docs/code/infrastructure/django_core/users/: admin.md  apps.md  repository.md  views.md
docs/code/source/application/users/: dto.md  service.md
docs/source/domain/users/: enums.md
faq/: index.html
infrastructure/django_core/core/: asgi.py  settings.py  urls.py  wsgi.py
infrastructure/django_core/django_core/: settings.py
infrastructure/django_core/users/: admin.py  apps.py  repository.py  views.py
infrastructure/django_core/users/migrations/: 0001_initial.py
infrastructure/django_core/users/models/: user.py  user_manager.py
installation/: index.html
project-structure/: index.html
src/application/users/: dto.py  service.py
src/application/users/interfaces/: repository_interface.py  service_interface.py
src/domain/users/: entity.py  enums.py
src/domain/users/entities/: user_entity.py
src/domain/users/enums/: error_message.py  status_code.py  success_message.py
src/tests/: conftest.py
src/tests/application/users/: test_dto.py  test_service.py
src/tests/domain/enums/: test_error_message.py
src/tests/fixtures/: faker.py
src/tests/fixtures/user/: fake_user_dto.py  service.py
(+34 files in other folders)
