[tool.poetry]
name = "clean_architecture_project"
version = "0.1.0"
description = ""
authors = ["Deivison Isidoro da Silva <61429017+deivisonisidoro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.6"
pydantic = "^1.10.9"
django = "^4.2.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0.post2"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mkdocs-material-extensions = "^1.1.1"
mkdocstrings-python = "^1.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"

[tool.flake8]
ignore = "E501"

[tool.black]
line-length = 79
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a directory named ".eggs"
  | \.git          # exclude the ".git" directory
  | \.hg           # exclude the ".hg" directory
  | \.mypy_cache   # exclude the ".mypy_cache" directory
  | \.tox          # exclude the ".tox" directory
  | \.venv         # exclude the ".venv" directory
  | _build         # exclude the "_build" directory
  | buck-out       # exclude the "buck-out" directory
  | build          # exclude the "build" directory
  | dist           # exclude the "dist" directory
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
